istio/06-tracing-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: jaeger-tracing
  namespace: istio-system
spec:
  configPatches:
    - applyTo: HTTP_CONNECTION_MANAGER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            tracing:
              provider:
                name: envoy.tracers.zipkin
                typed_config:
                  "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                  collector_cluster: outbound|9411||jaeger-collector.istio-system.svc.cluster.local
                  collector_endpoint: "/api/v2/spans"
                  shared_span_context: false
    - applyTo: HTTP_CONNECTION_MANAGER
      match:
        context: SIDECAR_OUTBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            tracing:
              provider:
                name: envoy.tracers.zipkin
                typed_config:
                  "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                  collector_cluster: outbound|9411||jaeger-collector.istio-system.svc.cluster.local
                  collector_endpoint: "/api/v2/spans"
                  shared_span_context: false
